Youtube video attached
Youtube video attached

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         </div>
                         <div class="col-md-5 ml-auto">
                            <div class="iframe-container">
-                              <iframe width="560" height="315" src="https://www.youtube.com/watch?v=am2ht8ubmQY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                              <iframe width="560" height="315" src="https://www.youtube.com/embed/am2ht8ubmQY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                            </div>
                         </div>
                         <div class=col-md-10>
