--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                   </div>
                   <div class="row">
                      <div class="col-md-11 ml-auto mr-auto text-center">
-                        <h4 class="title">PURVODAYA 2025 – xyz</h4>
+                        <h4 class="title">PURVODAYA 2026</h4>
                         <p align="center">
                            <b>
                               “The past, like the future, is indefinite and exists only as a spectrum of possibilities.”
