purvodya update test

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                   </div>
                   <div class="row">
                      <div class="col-md-11 ml-auto mr-auto text-center">
-                        <h4 class="title">PURVODAYA 2025 - CATALYSTS OF CHANGE</h4>
+                        <h4 class="title">PURVODAYA 2026</h4>
                         <p align="center">
                            <b>
                               “Innovation distinguishes between a leader and a follower.”
