--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                            <b>
                               “Innovation distinguishes between a leader and a follower.”
                         </p>
-                        <p align="right">- Steve Jobs</b></p>
+                        <p align="right"> "Steve Jobs"</b></p>
                         <p align="justify">
                            Catalysts of Change is a call to action for businesses and leaders to embrace progress, foster resilience and reimagine possibilities in an ever-evolving world. As we navigate shifting paradigms, we celebrate the pioneers transforming challenges into opportunities. In the past decade, India has transitioned from excelling in sectors like ecommerce and healthcare to becoming a leader in digital transformation. Initiatives like Digital India and UPI have revolutionized financial inclusion and technological growth. The ability of AI to process vast amounts of data, automate processes, and provide insights is what drives digital transformation and innovation across such areas as well as many others. Purvodaya'25 honors these Catalysts of Change, who challenge the status quo and propel us toward a sustainable, innovative, and equitable future.
                         </p>
