--- a/index.html
+++ b/index.html
@@ -944,7 +944,17 @@
                      <div class="col-md-12">
                         <div id="carouselExampleIndicatorss" class="carousel slide" data-ride="carousel">
                            <div class="carousel-inner">
-					<div class="carousel-item active">
+               <div class="carousel-item active">
+                     <div class="card card-testimonial card-plain">
+                        <div class="card-header card-header-image">
+                           <img class="img img-raised" src="assets\img\gallery\Purvodaya25_1.JPG">
+                        </div>
+                        <div class="card-body">
+                           <h5 class="card-description">Purvodaya '25</h5>
+                        </div>
+                     </div>
+                  </div>
+					<div class="carousel-item">
                      <div class="card card-testimonial card-plain">
                         <div class="card-header card-header-image">
                            <img class="img img-raised" src="assets\img\gallery\DSC01612.JPG">
