--- a/index.html
+++ b/index.html
@@ -954,6 +954,66 @@
                         </div>
                      </div>
                   </div>
+              <div class="carousel-item">
+                     <div class="card card-testimonial card-plain">
+                        <div class="card-header card-header-image">
+                           <img class="img img-raised" src="assets\img\gallery\Purvodaya25_2.JPG">
+                        </div>
+                        <div class="card-body">
+                           <h5 class="card-description">Purvodaya '25</h5>
+                        </div>
+                     </div>
+                  </div>
+               <div class="carousel-item">
+                     <div class="card card-testimonial card-plain">
+                        <div class="card-header card-header-image">
+                           <img class="img img-raised" src="assets\img\gallery\Purvodaya25_3.JPG">
+                        </div>
+                        <div class="card-body">
+                           <h5 class="card-description">Purvodaya '25</h5>
+                        </div>
+                     </div>
+                  </div>
+               <div class="carousel-item">
+                     <div class="card card-testimonial card-plain">
+                        <div class="card-header card-header-image">
+                           <img class="img img-raised" src="assets\img\gallery\Purvodaya25_4.JPG">
+                        </div>
+                        <div class="card-body">
+                           <h5 class="card-description">Purvodaya '25</h5>
+                        </div>
+                     </div>
+                  </div>
+               <div class="carousel-item">
+                     <div class="card card-testimonial card-plain">
+                        <div class="card-header card-header-image">
+                           <img class="img img-raised" src="assets\img\gallery\Purvodaya25_5.JPG">
+                        </div>
+                        <div class="card-body">
+                           <h5 class="card-description">Purvodaya '25</h5>
+                        </div>
+                     </div>
+                  </div>
+               <div class="carousel-item">
+                     <div class="card card-testimonial card-plain">
+                        <div class="card-header card-header-image">
+                           <img class="img img-raised" src="assets\img\gallery\Purvodaya25_6.JPG">
+                        </div>
+                        <div class="card-body">
+                           <h5 class="card-description">Purvodaya '25</h5>
+                        </div>
+                     </div>
+                  </div>
+               <div class="carousel-item">
+                     <div class="card card-testimonial card-plain">
+                        <div class="card-header card-header-image">
+                           <img class="img img-raised" src="assets\img\gallery\Purvodaya25_7.JPG">
+                        </div>
+                        <div class="card-body">
+                           <h5 class="card-description">Purvodaya '25</h5>
+                        </div>
+                     </div>
+                  </div>
 					<div class="carousel-item">
                      <div class="card card-testimonial card-plain">
                         <div class="card-header card-header-image">
