Faculty Co-Ordinator's Updated
Faculty Co-Ordinator's Updated

--- a/index.html
+++ b/index.html
@@ -1460,15 +1460,30 @@
                   <div class="col-md-6">
                      <div class="card card-profile card-plain">
                         <div class="card-header card-avatar">
-                           <img class="img" src="./assets/img/faculties/achandra.jpg" />
+                           <img class="img" src=".assets\img\faculties\tutan.jpg" />
                         </div>
                         <div class="card-body ">
-                           <h4 class="card-title">Prof. Abhijeet Chandra</h4>
+                           <h4 class="card-title">Prof. Tutan Ahmed</h4>
                            <h6 class="card-category text-muted">Professor</h6>
                         </div>
                         <div class="card-footer justify-content-center">
-                           <a href="https://www.facebook.com/chandra.abhijeet" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
-                           <a href="https://www.linkedin.com/in/abhijeetc" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+                           <a href="https://www.facebook.com/share/1AwEhR8aGP/" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
+                           <a href="https://www.linkedin.com/in/dr-tutan-ahmed-43193518/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-md-6">
+                     <div class="card card-profile card-plain">
+                        <div class="card-header card-avatar">
+                           <img class="img" src=".assets\img\faculties\spunia.jpg" />
+                        </div>
+                        <div class="card-body ">
+                           <h4 class="card-title">Prof. Sushil Puniya</h4>
+                           <h6 class="card-category text-muted">Professor</h6>
+                        </div>
+                        <div class="card-footer justify-content-center">
+                           <a href="" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
+                           <a href="https://www.linkedin.com/in/spunia/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
                         </div>
                      </div>
                   </div>
