faculty image updated
faculty image updated

--- a/index.html
+++ b/index.html
@@ -1460,7 +1460,7 @@
                   <div class="col-md-6">
                      <div class="card card-profile card-plain">
                         <div class="card-header card-avatar">
-                           <img class="img" src=".assets\img\faculties\tutan.jpg" />
+                           <img class="img" src="./assets/img/faculties/tutan.jpg" />
                         </div>
                         <div class="card-body ">
                            <h4 class="card-title">Prof. Tutan Ahmed</h4>
@@ -1475,7 +1475,7 @@
                   <div class="col-md-6">
                      <div class="card card-profile card-plain">
                         <div class="card-header card-avatar">
-                           <img class="img" src=".assets\img\faculties\spunia.jpg" />
+                           <img class="img" src="./assets/img/faculties/spunia.jpg" />
                         </div>
                         <div class="card-body ">
                            <h4 class="card-title">Prof. Sushil Puniya</h4>
