--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         </div>
                         <div class="col-md-5 ml-auto">
                            <div class="iframe-container">
-                              <iframe width="560" height="315" src="https://www.youtube.com/embed/am2ht8ubmQY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                              <iframe width="560" height="315" src="./assets/img/purvodaya-launch-vid-2026/Theme Launch.mp4" title="Video Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                            </div>
                         </div>
                         <div class=col-md-10>
@@ -252,7 +252,7 @@
          </div>
          <div class="cd-section" id="blogs">
             <div id="speakers" class="carousel slide" data-ride="carousel">
-               <h2 class="title" align="center">Purvodaya 2024<br></h2>
+               <h2 class="title" align="center">Purvodaya 2025<br></h2>
                <ol class="carousel-indicators">
                   <li data-target="#speakers" data-slide-to="0" class="active"></li>
                   <li data-target="#speakers" data-slide-to="1"></li>
@@ -264,25 +264,28 @@
                </ol>
                <div class="carousel-inner" align = "center">
                   <div class="carousel-item active">
-                     <img src="./assets/img/events-2024/events/post 1.jpg" alt="" style="width: 40%;">
+                     <img src="./assets/img/events-2025/post 1.jpg" alt="" style="width: 40%;">
                   </div>
                   <div class="carousel-item">
-                     <img src="./assets/img/events-2024/events/post 2.jpg" alt="" style="width: 40%;">
+                     <img src="./assets/img/events-2025/post 2.jpg" alt="" style="width: 40%;">
                   </div>
                   <div class="carousel-item">
-                     <img src="./assets/img/events-2024/events/post 3.jpg" alt="" style="width: 40%;">
+                     <img src="./assets/img/events-2025/post 3.jpg" alt="" style="width: 40%;">
                   </div>
                   <div class="carousel-item">
-                     <img src="./assets/img/events-2024/events/post 4.jpg" alt="" style="width: 40%;">
+                     <img src="./assets/img/events-2025/post 4.jpg" alt="" style="width: 40%;">
                   </div>
                   <div class="carousel-item">
-                     <img src="./assets/img/events-2024/events/post 5.jpg" alt="" style="width: 40%;">
+                     <img src="./assets/img/events-2025/post 5.jpg" alt="" style="width: 40%;">
                   </div>
                   <div class="carousel-item">
-                     <img src="./assets/img/events-2024/events/post 6.jpg" alt="" style="width: 40%;">
+                     <img src="./assets/img/events-2025/post 6.jpg" alt="" style="width: 40%;">
                   </div>
                   <div class="carousel-item">
-                     <img src="./assets/img/events-2024/events/post 7.jpg" alt="" style="width: 40%;">
+                     <img src="./assets/img/events-2025/post 7.jpg" alt="" style="width: 40%;">
+                  </div>
+                  <div class="carousel-item">
+                     <img src="./assets/img/events-2025/post 8.jpg" alt="" style="width: 40%;">
                   </div>
                </div>
 		<div class="carousel-item">
@@ -1500,149 +1503,175 @@
 				  <div class="col-md-4">
 				     <div class="card card-profile card-plain">
                         <div class="card-header card-avatar">
-                           <img class="img" src="./assets/img/Team/2024/S Smruthi.jpg" />
+                           <img class="img" src="./assets/img/Team/2025/Padma Raga Anand.JPG" />
                         </div>
                         <div class="card-body ">
-                           <h4 class="card-title">S Smruthi</h4>
+                           <h4 class="card-title">Padma Raga Anand</h4>
 						   <h6 class="card-category text-muted">President</h6>
                         </div>
                         <div class="card-footer justify-content-center">
-                           <a href="https://www.linkedin.com/in/smruthi-srikanth/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+                           <a href="https://www.linkedin.com/in/padma-raga-anand-2066221a9/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
                         </div>
                      </div>
                   </div>
 				   <div class="col-md-4">
                      <div class="card card-profile card-plain">
                         <div class="card-header card-avatar">
-                           <img class="img" src="./assets/img/Team/2024/Kalyani Mishra.jpg" />
+                           <img class="img" src="./assets/img/Team/2025/Priyanka Bothra.JPG" />
                         </div>
                         <div class="card-body ">
-                           <h4 class="card-title">Kalyani Mishra</h4>
+                           <h4 class="card-title">Priyanka Bothra</h4>
 						   <h6 class="card-category text-muted">Treasurer</h6>
                         </div>
                         <div class="card-footer justify-content-center">
-                           <a href="https://www.linkedin.com/in/kalyani-mishra-8ab5591b5/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+                           <a href="https://www.linkedin.com/in/priyanka-bothra/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
                         </div>
                      </div>
                   </div>
 				   <div class="col-md-4">
                      <div class="card card-profile card-plain">
                         <div class="card-header card-avatar">
-                           <img class="img" src="./assets/img/Team/2024/Pradeep Korada.jpg" />
+                           <img class="img" src="./assets/img/Team/2025/Krishnaraj R.JPG" />
                         </div>
                         <div class="card-body ">
-                           <h4 class="card-title">Pradeep Korada</h4>
+                           <h4 class="card-title">Krishnaraj R</h4>
 						   <h6 class="card-category text-muted">Vice-President</h6>
                         </div>
                         <div class="card-footer justify-content-center">
-                           <a href="https://www.linkedin.com/in/pradeepkorada/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+                           <a href="	https://www.linkedin.com/in/krishnaraj-r-7a11b7318/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
                         </div>
                      </div>
                   </div>
 				   <div class="col-md-3">
                      <div class="card card-profile card-plain">
                         <div class="card-header card-avatar">
-                           <img class="img" style="width: 60px" src="./assets/img/Team/2024/Sai_bindu.png" />
+                           <img class="img" src="./assets/img/Team/2025/Aasawari Chandrachud.JPG" />
                         </div>
                         <div class="card-body ">
-                           <h4 class="card-title">Koka Sai Bindu Chandrika</h4>
+                           <h4 class="card-title">Aasawari Chandrachud</h4>
                         </div>
                         <div class="card-footer justify-content-center">
-                           <a href="https://www.linkedin.com/in/koka-sai-bindu-chandrika-bts0613/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+                           <a href="https://www.linkedin.com/in/aasawari-chandrachud-a0506a288/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
                         </div>
                      </div>
                   </div>
 				   <div class="col-md-3">
                      <div class="card card-profile card-plain">
                         <div class="card-header card-avatar">
-                           <img class="img" src="./assets/img/Team/2024/Aswathi.jpg" />
+                           <img class="img" src="./assets/img/Team/2025/Amogh Mopkar.JPG" />
                         </div>
                         <div class="card-body ">
-                           <h4 class="card-title">Aswathi R</h4>
+                           <h4 class="card-title">Amogh Mopkar</h4>
                         </div>
                         <div class="card-footer justify-content-center">
-                           <a href="https://www.linkedin.com/in/aswathi-r-9b8829169/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+                           <a href="https://www.linkedin.com/in/amoghmopkar/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
                         </div>
                      </div>
                   </div>
 				   <div class="col-md-3">
                      <div class="card card-profile card-plain">
                         <div class="card-header card-avatar">
-                           <img class="img"  style="width: 60px" src="./assets/img/Team/2024/Mayank.png" />
+                           <img class="img" src="./assets/img/Team/2025/Manvendra Pratap Singh.JPG" />
                         </div>
                         <div class="card-body ">
-                           <h4 class="card-title">Mayank Agrawal</h4>
+                           <h4 class="card-title">Manvendra Pratap Singh</h4>
                         </div>
                         <div class="card-footer justify-content-center">
-                           <a href="https://www.linkedin.com/in/mayank-agrawal-6458b81a8/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+                           <a href="https://www.linkedin.com/in/manvendrapratapsingh3001/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
                         </div>
                      </div>
                   </div>
 				   <div class="col-md-3">
                      <div class="card card-profile card-plain">
                         <div class="card-header card-avatar">
-                           <img class="img" src="./assets/img/Team/2024/Angith Madhu.jpg" />
+                           <img class="img" src="./assets/img/Team/2025/Neelam Esha Manogna.JPG" />
                         </div>
                         <div class="card-body ">
-                           <h4 class="card-title">Angith Madhu</h4>
+                           <h4 class="card-title">Neelam Esha Manogna</h4>
                         </div>
                         <div class="card-footer justify-content-center">
-                           <a href="https://www.linkedin.com/in/angith-madhu-672590ab/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+                           <a href="https://www.linkedin.com/in/neelam-esha-manogna-73bb101b1/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
                         </div>
                      </div>
                   </div>
 				   <div class="col-md-3">
                      <div class="card card-profile card-plain">
                         <div class="card-header card-avatar">
-                           <img class="img" src="./assets/img/Team/2024/Anjala.jpg" />
+                           <img class="img" src="./assets/img/Team/2025/Pratiti Padhi.JPG" />
                         </div>
                         <div class="card-body ">
-                           <h4 class="card-title">Anjala K</h4>
+                           <h4 class="card-title">Pratiti Padhi</h4>
                         </div>
                         <div class="card-footer justify-content-center">
-                           <a href="https://www.linkedin.com/in/anjala1998/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+                           <a href="https://www.linkedin.com/in/pratiti-padhi-87937a1a7/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
                         </div>
                      </div>
                   </div>
 				   <div class="col-md-3">
                      <div class="card card-profile card-plain">
                         <div class="card-header card-avatar">
-                           <img class="img" src="./assets/img/Team/2024/Archi.jpg" />
+                           <img class="img" src="./assets/img/Team/2025/Sakshi Bhutkar.JPG" />
                         </div>
                         <div class="card-body ">
-                           <h4 class="card-title">Archi Bagherwal</h4>
+                           <h4 class="card-title">Sakshi Bhutkar</h4>
                         </div>
                         <div class="card-footer justify-content-center">
-                           <a href="https://www.linkedin.com/in/archi-bagherwal-421b48170/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+                           <a href="https://www.linkedin.com/in/sakshibhutkar/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
                         </div>
                      </div>
                   </div>
                    <div class="col-md-3">
                      <div class="card card-profile card-plain">
                         <div class="card-header card-avatar">
-                           <img class="img"  style="width: 60px" src="./assets/img/Team/2024/Pratiksha.png" />
+                           <img class="img"  src="./assets/img/Team/2025/Sakshi Wakchaure.JPG" />
                         </div>
                         <div class="card-body ">
-                           <h4 class="card-title">Pratiksha Verma</h4>
+                           <h4 class="card-title">Sakshi Wakchare</h4>
                         </div>
                         <div class="card-footer justify-content-center">
-                           <a href="https://www.linkedin.com/in/pratiksha-verma-2a301916b/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+                           <a href="https://www.linkedin.com/in/sakshiwakchaure0116/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
                         </div>
                      </div>
                   </div>
 				   <div class="col-md-3">
                      <div class="card card-profile card-plain">
                         <div class="card-header card-avatar">
-                           <img class="img" style="width: 60px" src="./assets/img/Team/2024/Bebak.png" />
+                           <img class="img" src="./assets/img/Team/2025/Sweha Rajora.JPG" />
                         </div>
                         <div class="card-body ">
-                           <h4 class="card-title">Bebak More</h4>
+                           <h4 class="card-title">Sweha Rajora</h4>
                         </div>
                         <div class="card-footer justify-content-center">
-                           <a href="https://www.linkedin.com/in/bebakmore/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+                           <a href="	https://www.linkedin.com/in/sweha/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
                         </div>
                      </div>
                </div>
+               	<div class="col-md-3">
+                        <div class="card card-profile card-plain">
+                           <div class="card-header card-avatar">
+                              <img class="img" src="./assets/img/Team/2025/Syeda Bushra.JPG" />
+                           </div>
+                           <div class="card-body ">
+                              <h4 class="card-title">Syeda Bushra</h4>
+                           </div>
+                           <div class="card-footer justify-content-center">
+                              <a href="https://www.linkedin.com/in/bushra-syeda-6351b5191/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+                           </div>
+                     </div>
+                  </div>
+                  <div class="col-md-3">
+                        <div class="card card-profile card-plain">
+                           <div class="card-header card-avatar">
+                              <img class="img" src="./assets/img/Team/2025/Vedant Anwekar.JPG" />
+                           </div>
+                           <div class="card-body ">
+                              <h4 class="card-title">Vedant Anwekar</h4>
+                           </div>
+                           <div class="card-footer justify-content-center">
+                              <a href="https://www.linkedin.com/in/vanwekar/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+                           </div>
+                     </div>
+                  </div>
             </div>
          </div>
       </div>
@@ -1683,11 +1712,11 @@
                         </div>
                         <div class="description">
                            <h4 class="info-title">Call Us</h4>
-                           <p> S Smruthi
-                              <br> +91 9021485523
+                           <p> Padma Raga Anand 
+                              <br> +91 9177511858
                            </p>
-                           <p> Pradeep Korada 
-                              <br> +91 8891999293
+                           <p> Krishnaraj R
+                              <br> +91 8943132460
                            </p>
                         </div>
                      </div>
