--- a/index.html
+++ b/index.html
@@ -734,11 +734,11 @@
                                  	<!--<a target="_blank" href="https://www.youthforindia.org/">-->
                                  		<div class="card card-profile">
                                  			<div >
-                                 				<br><img class="img" height=120px width=auto type="image/png" src="./assets/img/Sponsors/2024/Aditya Birla.jpg" />
+                                 				<br><img class="img" height=120px width=auto type="image/png" src="./assets/img/Sponsors/2024/Grant thorton.jpeg" />
                                  			</div>
                                  			<div class="card-body ">
-                                 				<h6 class="card-title"><br>Aditya Birla</h6>
-                                 				<h6 class="card-category text-muted">Platinum Sponsor</h6>
+                                 				<h6 class="card-title"><br>Grant Thorton</h6>
+                                 				<h6 class="card-category text-muted">Silver</h6>
                                  			</div>
                                  		</div>
                                  	</a>
@@ -752,11 +752,11 @@
                                  	<!--<a target="_blank" href="https://www.adityabirla.com/">-->
                                  		<div class="card card-profile">
                                  			<div >
-                                 				<br><img class="img" height=120px width=auto type="image/png" src="./assets/img/Sponsors/2024/IOCL.png" />
+                                 				<br><img class="img" height=120px width=auto type="image/png" src="./assets/img/Sponsors/2024/Finlatics.jpeg" />
                                  			</div>
                                  			<div class="card-body ">
-                                 				<h6 class="card-title"><br>IOCL</h6>
-                                 				<h6 class="card-category text-muted">Gold sponsor</h6>
+                                 				<h6 class="card-title"><br>Finlatics</h6>
+                                 				<h6 class="card-category text-muted">Event Partner</h6>
                                  			</div>
                                  		</div>
                                  	</a>
@@ -770,11 +770,11 @@
                                  	<!--<a target="_blank" href="https://www.ongcindia.com/">-->
                                  		<div class="card card-profile">
                                  			<div >
-                                 				<br><img class="img" height=120px width=auto type="image/png" src="./assets/img/Sponsors/2024/Mphasis.png" />
+                                 				<br><img class="img" height=120px width=auto type="image/png" src="./assets/img/Sponsors/2024/Abhibus.jpeg" />
                                  			</div>
                                  			<div class="card-body ">
-                                 				<h6 class="card-title"><br>MPhasis</h6>
-                                 				<h6 class="card-category text-muted">Silver Sponsor</h6>
+                                 				<h6 class="card-title"><br>Abhibus</h6>
+                                 				<h6 class="card-category text-muted">Travel Partner</h6>
                                  			</div>
                                  		</div>
                                  	</a>
@@ -785,11 +785,11 @@
                                  	<!--<a target="_blank" href="https://www.baker-taylor.com/">-->
                                  		<div class="card card-profile">
                                  			<div >
-                                 				<br><img class="img" height=120px width=auto type="image/png" src="./assets/img/Sponsors/2024/Janatics.png" />
+                                 				<br><img class="img" height=120px width=auto type="image/png" src="./assets/img/Sponsors/2024/umeed.jpeg" />
                                  			</div>
                                  			<div class="card-body ">
-                                 				<h6 class="card-title"><br>JANATICS</h6>
-                                 				<h6 class="card-category text-muted">Silver Sponsor</h6>
+                                 				<h6 class="card-title"><br>UMEED</h6>
+                                 				<h6 class="card-category text-muted">Event Partner</h6>
                                  			</div>
                                  		</div>
                                  	</a>
@@ -841,7 +841,7 @@
                                           </div>
                                           <div class="card-body ">
                                              <h4 class="card-title">Business Standard</h4>
-                                             <h6 class="card-category text-muted"> media partner</h6>
+                                             <h6 class="card-category text-muted"> News partner</h6>
                                           </div>
                                        </div>
                                     </a>
@@ -873,11 +873,11 @@
                                        <div class="card card-profile">
                                           <div >
                                              <br>
-                                             <img class="img" height=50px width=auto type="image/png" src="./assets/img/Sponsors/2024/Teeshood.png" />
+                                             <img class="img" height=50px width=auto type="image/png" src="./assets/img/Sponsors/2024/Indian matinee.jpeg" />
                                           </div>
                                           <div class="card-body ">
-                                             <h4 class="card-title">Tees Hood </h4>
-                                             <h6 class="card-category text-muted">Merchandise partner</h6>
+                                             <h4 class="card-title">Indian Matinee </h4>
+                                             <h6 class="card-category text-muted">Fashion partner</h6>
                                           </div>
                                        </div>
                                     </a>
@@ -905,11 +905,11 @@
                                     <!-- <a target="_blank" href="https://www.belriseindustries.com/"> -->
                                        <div class="card card-profile">
                                           <div >
-                                             <br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/2024/Jungle Bound.jpeg" />
+                                             <br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/2024/sbi youth for india.jpeg" />
                                           </div>
                                           <div class="card-body ">
-                                             <h6 class="card-title"><br>jungle bound</h6>
-                                             <h6 class="card-category text-muted">Gifting partner</h6>
+                                             <h6 class="card-title"><br>SBI Youth For India</h6>
+                                             <h6 class="card-category text-muted">Silver</h6>
                                           </div>
                                        </div>
                                     </a>
@@ -930,7 +930,20 @@
                                     </a>
                                  </div>
 						</div>
-					
+
+					 <div class="col-md-4">
+                                    <!-- <a target="_blank" href="https://www.belriseindustries.com/"> -->
+                                       <div class="card card-profile">
+                                          <div >
+                                             <br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/2024/Aditya Birla.jpg" />
+                                          </div>
+                                          <div class="card-body ">
+                                             <h6 class="card-title"><br>Aditya Birla</h6>
+                                             <h6 class="card-category text-muted">Platinum</h6>
+                                          </div>
+                                       </div>
+                                    </a>
+                                 </div>
 
 
 
