--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
                                           </div>
                                           <div class="card-body ">
                                              <h4 class="card-title">CBI</h4>
-                                             <h6 class="card-category text-muted">Silver sponsor</h6>
+                                             <h6 class="card-category text-muted">Silver</h6>
                                           </div>
                                        </div>
                                     </a>
