task 2 - grant thornton image+ spelling changed + theme video
task 2 - grant thornton image+ theme video

--- a/index.html
+++ b/index.html
@@ -131,11 +131,7 @@
                         </div>
                         <div class="col-md-5 ml-auto">
                            <div class="iframe-container">
-<<<<<<< Updated upstream
                               <iframe width="560" height="315" src="./assets/img/purvodaya-launch-vid-2026/Theme Launch.mp4" title="Video Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-=======
-                              <iframe width="560" height="315" src="./assets/img/purvodaya-2026-launch/Theme Launch.mp4" title="Video Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
->>>>>>> Stashed changes
                            </div>
                         </div>
                         <div class=col-md-10>
@@ -738,10 +734,10 @@
                                  	<!--<a target="_blank" href="https://www.youthforindia.org/">-->
                                  		<div class="card card-profile">
                                  			<div >
-                                 				<br><img class="img" height=120px width=auto type="image/png" src="./assets/img/Sponsors/2024/Grant thorton.jpeg" />
+                                 				<br><img class="img" height=120px width=auto type="image/png" src="./assets/img/Sponsors/2024/grant thornton.jpg" />
                                  			</div>
                                  			<div class="card-body ">
-                                 				<h6 class="card-title"><br>Grant Thorton</h6>
+                                 				<h6 class="card-title"><br>Grant Thornton</h6>
                                  				<h6 class="card-category text-muted">Silver</h6>
                                  			</div>
                                  		</div>
